--- a/sass/site/primary/_content-area.scss
+++ b/sass/site/primary/_content-area.scss
@@ -22,6 +22,7 @@
     }
 
     @media screen and (min-width: 1250px) {
+        margin-top: 0;
         padding: 0 2rem;
     }
 }
